<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.horatiu.fractles.CustomizationScreen">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/scale_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:textAlignment="center"
            android:text="@string/_default_scale" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/scaling_factor"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/zoom_amount"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/zoom_text"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/_default_zoom"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/height"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/height_text"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/default_max"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/width"
            android:id="@+id/textView4"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/width_text"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:text="@string/default_max_width"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/color_shift"
            android:id="@+id/textView5"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/color_text"
            android:layout_row="4"
            android:layout_column="2"
            android:textAlignment="center"
            android:text="@string/_default_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quality_depth"
            android:id="@+id/textView6"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/depth_text"
            android:layout_row="5"
            android:layout_column="2"
            android:textAlignment="center"
            android:text="@string/_default_quality" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/render_text"
            android:id="@+id/button"
            android:layout_row="17"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:onClick="render"
            />
    </GridLayout>

</RelativeLayout>
